--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="github-markdown.css">
+<style>
+	.markdown-body {
+		box-sizing: border-box;
+		min-width: 200px;
+		max-width: 980px;
+		margin: 0 auto;
+		padding: 45px;
+	}
+
+	@media (max-width: 767px) {
+		.markdown-body {
+			padding: 15px;
+		}
+	}
+</style>
+<article class="markdown-body">
 <h1 id="main-page">Main Page</h1>
 <h2 id="about-me">About Me</h2>
 <p><a href="about.html">About Me</a></p>
 <h2 id="contact-me">Contact Me</h2>
 <p><a href="Contact.html">Contact Me</a></p>
+<article>
