--- a/Contact.html
+++ b/Contact.html
@@ -1,3 +1,34 @@
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+		<title>GitHub Markdown CSS demo</title>
+		<meta name="color-scheme" content="light dark">
+		<link rel="stylesheet" href="github-markdown.css">
+		<style>
+			body {
+				box-sizing: border-box;
+				min-width: 200px;
+				max-width: 980px;
+				margin: 0 auto;
+				padding: 45px;
+			}
+
+			@media (prefers-color-scheme: light) {
+				body {
+					background-color: #ffffff;
+				}
+			}
+		</style>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css">
+		<style>
+			.github-fork-ribbon:before {
+				background-color: #121612;
+			}
+		</style>
+	</head>
+<article class="markdown-body">
 <h1 id="something-isn-t-right-here-">Something isn&#39;t right here...</h1>
 <p>If you&#39;re here, it&#39;s either because you want to laugh at my coding skills or you&#39;re me testing if this page works.
 Either way, hi!
@@ -6,3 +37,4 @@ My contact details are below:</p>
 <p>i am tree#8107</p>
 <h2 id="email-not-my-personal-one-">Email (not my personal one)</h2>
 <p><a href="mailto:fysixdev@gmail.com">fysixdev@gmail.com</a></p>
+</article>
