--- a/about.html
+++ b/about.html
@@ -33,4 +33,5 @@
 <p>Hi, I&#39;m FysixDev and I run a YouTube channel called FysixDev. If you want, you can check it out <a href="https://www.youtube.com/channel/UCS2JHY07JHtnXx4fGWfeftg">here</a>.
 I&#39;ve been coding for around 6 months now.
 I currently have 90 subscribers on YouTube.</p>
+	<a href="index.html">Return to home.</a>
 </article>
