--- a/game_archive_wip/game1/index.html
+++ b/game_archive_wip/game1/index.html
@@ -2,17 +2,19 @@
 <html>
 <head>
 <script>
-function myFunction() {
-  document.getElementById("demo").innerHTML = "Paragraph changed.";
-}
+var c = document.getElementById("myCanvas");
+var ctx = c.getContext("2d");
+ctx.moveTo(0, 0);
+ctx.lineTo(200, 100);
+ctx.stroke();
 </script>
 </head>
 <body>
 
 <h2>Demo JavaScript in Head</h2>
 
-<p id="demo">A Paragraph</p>
-<button type="button" onclick="myFunction()">Try it</button>
+<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+</canvas> 
 
 </body>
 </html>
