--- a/game_archive_wip/game1/index.html
+++ b/game_archive_wip/game1/index.html
@@ -5,7 +5,7 @@
 <style>
 canvas {
     border:1px solid #d3d3d3;
-    background-color: #f1f1f1;
+    background-color: #000000;
 }
 </style>
 </head>
@@ -123,6 +123,7 @@ function updateGameArea() {
 function everyinterval(n) {
     if ((myGameArea.frameNo / n) % 1 == 0) {return true;}
     return false;
+    star = new component(1, 1, "white", 10, 120);
 }
 
 function accelerate(n) {
