--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 <article class="markdown-body">
 <h1 id="main-page">Main Page</h1>
 <h2 id="about-me">About Me</h2>
-<p><a href="game_archive_wip/game1/index.html">About Me</a></p>
+<p><a href="about.html">About Me</a></p>
 <h2 id="contact-me">Contact Me</h2>
 <p><a href="Contact.html">Contact Me</a></p>
+<h2 id="contact-me">Games (WIP)</h2>
+<p><a href="games/game1/index.html">CGame 1: Block Stack</a></p>
 <article>
