--- a/index.html
+++ b/index.html
@@ -35,5 +35,5 @@
 <h2 id="contact-me">Contact Me</h2>
 <p><a href="Contact.html">Contact Me</a></p>
 <h2 id="contact-me">Games (WIP)</h2>
-<p><a href="games/game1/index.html">CGame 1: Block Stack</a></p>
+<p><a href="games/2048-lite-master/index.html">CGame 1: 2048</a></p>
 <article>
