--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<meta name="color-scheme" content="light dark">
+		<meta name="color-scheme" content="light">
 		<link rel="stylesheet" href="github-markdown.css">
 		<style>
 			body {
