--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<meta name="color-scheme" content="light dark">
+		<meta name="color-scheme" content="light">
 		<link rel="stylesheet" href="github-markdown.css">
 		<style>
 			body {
@@ -27,6 +27,7 @@
 			}
 		</style>
 	</head>
+	<body>
 <article class="markdown-body">
 <h1 id="something-isn-t-right-here-">Something isn&#39;t right here...</h1>
 <p>If you&#39;re here, it&#39;s either because you want to laugh at my coding skills or you&#39;re me testing if this page works.
