--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 <h1 id="main-page">Main Page</h1>
 <h2 id="about-me">About Me</h2>
 <p><a href="about.html">About Me</a></p>
-<h2 id="contact-me">Contact Me</h2>
-<p><a href="Contact.html">Contact Me</a></p>
+<h2 id="contact-me"><a href="Contact.html">Contact Me</a></h2>
 <h2 id="contact-me">Games (WIP)</h2>
 <p><a href="games/2048-lite-master/index.html">CGame 1: 2048</a></p>
 <article>
