--- a/test.html
+++ b/test.html
@@ -1,8 +1,23 @@
-<link rel="stylesheet" href="test.css">
+!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Expanding/collapsing FAQs</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://use.fontawesome.com/30c21ac8e0.js"></script>
+	
+	
+	
+
+</head>
+<body>
 <div class="container">
 	<div class="row">
 		<div class="col-sm-12">
-			<p class="my-5"><a href="https://www.solodev.com"><img src="https://raw.githubusercontent.com/solodev/expanding-faq-tabs/master/solodev-logo.png" alt="logo" class="img-fluid d-block mx-auto"/></a></p>
+			<p class="my-5"><a href="https://www.solodev.com"><img src="solodev-logo.png" alt="logo" class="img-fluid d-block mx-auto"/></a></p>
 		</div>
 	</div>
 	<div class="row">
@@ -102,4 +117,7 @@
 		  </div><!-- tab content-->
 		</div>
 	</div>
-</div>
+</div>	
+
+	</body>
+</html>
