--- a/test.html
+++ b/test.html
@@ -58,7 +58,7 @@ details > summary::-webkit-details-marker {
   <h1>FAQ by HTML</h1>
   <main>
   <details open>
-    <summary>How I solve this issue?</summary>
+    <summary>Contact Me</summary>
     <div class="faq__content">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor suscipit, iure tenetur eveniet, vero tempore delectus? Perferendis, quisquam ullam consequuntur?</p>
     </div>
