--- a/test.html
+++ b/test.html
@@ -57,7 +57,7 @@ details > summary::-webkit-details-marker {
 <body>
   <h1>FAQ by HTML</h1>
   <main>
-  <details open>
+  <details>
     <summary>Contact Me</summary>
     <div class="faq__content">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor suscipit, iure tenetur eveniet, vero tempore delectus? Perferendis, quisquam ullam consequuntur?</p>
