--- a/test.html
+++ b/test.html
@@ -60,14 +60,82 @@ details > summary::-webkit-details-marker {
   <details>
     <summary>Contact Me</summary>
     <div class="faq__content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor suscipit, iure tenetur eveniet, vero tempore delectus? Perferendis, quisquam ullam consequuntur?</p>
+      <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+		<meta name="color-scheme" content="light">
+		<link rel="stylesheet" href="github-markdown.css">
+		<style>
+			body {
+				box-sizing: border-box;
+				min-width: 200px;
+				max-width: 980px;
+				margin: 0 auto;
+				padding: 45px;
+			}
+
+			@media (prefers-color-scheme: light) {
+				body {
+					background-color: #0B2647;
+				}
+			}
+		</style>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css">
+		<style>
+			.github-fork-ribbon:before {
+				background-color: #121612;
+			}
+		</style>
+	</head>
+	<body>
+<article class="markdown-body">
+<h1 id="something-isn-t-right-here-">Something isn&#39;t right here...</h1>
+<p>If you&#39;re here, it&#39;s either because you want to laugh at my coding skills or you&#39;re me testing if this page works.
+Either way, hi!
+My contact details are below:</p>
+<h2 id="discord">Discord</h2>
+<p>i am tree#8107</p>
+<h2 id="email-not-my-personal-one-">Email (not my personal one)</h2>
+<p><a href="mailto:fysixdev@gmail.com">fysixdev@gmail.com</a></p>
+</article>
+
     </div>
   </details>
 
     <details>
-    <summary>How to input your data on this board?</summary>
+    <summary>About Me</summary>
     <div class="faq__content">
-      <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+      <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+		<meta name="color-scheme" content="light">
+		<link rel="stylesheet" href="github-markdown.css">
+		<style>
+			body {
+				box-sizing: border-box;
+				min-width: 200px;
+				max-width: 980px;
+				margin: 0 auto;
+				padding: 45px;
+			}
+
+			@media (prefers-color-scheme: light) {
+				body {
+					background-color: #0B2647;
+				}
+			}
+		</style>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css">
+		<style>
+			.github-fork-ribbon:before {
+				background-color: #121612;
+			}
+		</style>
+	</head>
+	<body>
+<article class="markdown-body">
+<h1 id="about-me">About Me</h1>
+<p>Hi, I&#39;m FysixDev and I run a YouTube channel called FysixDev. If you want, you can check it out <a href="https://www.youtube.com/channel/UCS2JHY07JHtnXx4fGWfeftg">here</a>.
+I&#39;ve been coding for around 6 months now.
+I currently have 90 subscribers on YouTube.</p>
     </div>
   </details>
    </main>
