--- a/Contact.html
+++ b/Contact.html
@@ -37,4 +37,5 @@ My contact details are below:</p>
 <p>i am tree#8107</p>
 <h2 id="email-not-my-personal-one-">Email (not my personal one)</h2>
 <p><a href="mailto:fysixdev@gmail.com">fysixdev@gmail.com</a></p>
+<a href="index.html">Return to home.</a>
 </article>
