--- a/test.html
+++ b/test.html
@@ -112,9 +112,7 @@ details > summary::-webkit-details-marker {
 	#main {
 	  transition: margin-left .5s;
 	  padding: 16px;
-	  position: relative;
-	  left: -930px;
-	  top: -50px;
+	  position: fixed;
 	}
 	
 	/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
