--- a/test.html
+++ b/test.html
@@ -120,6 +120,9 @@ details > summary::-webkit-details-marker {
 	  .sidebar {padding-top: 15px;}
 	  .sidebar a {font-size: 18px;}
 	}
+	@media screen and (max-height: 1080px) {
+	  #main {left: -100}
+	}
 	</style>
 	</head>
 	<body>
