--- a/test.html
+++ b/test.html
@@ -1,4 +1,3 @@
-
 <style>
 	body {
   font-family: 'Montserrat', sans-serif;
@@ -113,6 +112,7 @@ details > summary::-webkit-details-marker {
 	  transition: margin-left .5s;
 	  padding: 16px;
 	  position: fixed;
+	  left: 0;
 	}
 	
 	/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@@ -232,6 +232,40 @@ My contact details are below:</p>
 <p>Hi, I&#39;m FysixDev and I run a YouTube channel called FysixDev. If you want, you can check it out <a href="https://www.youtube.com/channel/UCS2JHY07JHtnXx4fGWfeftg">here</a>.
 I&#39;ve been coding for around 6 months now.
 I currently have 90 subscribers on YouTube.</p>
+    </div>
+  </details>
+  <details>
+    <summary>Other Stuff</summary>
+    <div class="faq__content">
+      <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+		<meta name="color-scheme" content="light">
+		<link rel="stylesheet" href="github-markdown.css">
+		<style>
+			body {
+				box-sizing: border-box;
+				min-width: 200px;
+				max-width: 980px;
+				margin: 0 auto;
+				padding: 45px;
+			}
+
+			@media (prefers-color-scheme: light) {
+				body {
+					background-color: #0B2647;
+				}
+			}
+		</style>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css">
+		<style>
+			.github-fork-ribbon:before {
+				background-color: #121612;
+			}
+		</style>
+	</head>
+	<body>
+<article class="markdown-body">
+<a href="games/game_vault/game_vault.html">Game Vault</a>
     </div>
   </details>
    </main>
