--- a/test.html
+++ b/test.html
@@ -266,6 +266,7 @@ I currently have 90 subscribers on YouTube.</p>
 	<body>
 <article class="markdown-body">
 <a href="games/game_vault/game_vault.html">Game Vault</a>
+<a href="chatroom/index.html">Message Board</a>
     </div>
   </details>
    </main>
