--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <style>
-body {
+	body {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -265,7 +265,7 @@ I currently have 90 subscribers on YouTube.</p>
 	</head>
 	<body>
 <article class="markdown-body">
-<p><a href="games/game_vault/game_vault.html">Game Vault</a></p>
+<p><a href="games/game_vault/game_vault.html">Game Vault\n</a></p>
 <p><a href="chatroom/index.html">Message Board</a></p>
     </div>
   </details>
