--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -1,24 +1,8 @@
-<%
-dim numvisits
-response.cookies("NumVisits").Expires=date+365
-numvisits=request.cookies("NumVisits")
-
-if numvisits="" then
-   response.cookies("NumVisits")=1
-   response.write("Welcome! This is the first time you are visiting this Web page.")
-else
-   response.cookies("NumVisits")=numvisits+1
-   response.write("You have visited this ")
-   response.write("Web page " & numvisits)
-   if numvisits=1 then
-     response.write " time before!"
-   else
-     response.write " times before!"
-   end if
-end if
-%>
 <!DOCTYPE html>
 <html>
 <body>
+<script>
+    document.cookie = "username=John Doe; expires=Thu, 18 Dec 2013 12:00:00 UTC"; 
+</script>
 </body>
 </html>
