--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -3,6 +3,7 @@
 <body onload="myFunc()">
 <script>
     function myFunc() {
+        var numvisits; 
         document.cookie = "username=John Doe; expires=Thu, 18 Dec 2021 12:00:00 UTC"; 
         console.log(document.cookie);
     }
