--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -4,7 +4,8 @@
 <script>
     function myFunc() {
         var numvisits; 
-        document.cookie = "username=John Doe; expires=Thu, 18 Dec 2021 12:00:00 UTC"; 
+        document.cookie = "visint="+numvists+"; expires=Thu, 18 Dec 2021 12:00:00 UTC";
+        numvists++;
         console.log(document.cookie);
     }
 </script>
