--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -4,8 +4,8 @@
 <script>
     function myFunc() {
         var numvisits; 
-        document.cookie = "visint="+numvists;
-        numvists++;
+        document.cookie = "visint="+numvisits;
+        numvisits++;
         console.log(document.cookie);
     }
 </script>
