--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -3,9 +3,9 @@
 <body onload="myFunc()">
 <script>
     function myFunc() {
-        var numvisits; 
-        document.cookie = "visint="+numvisits;
-        numvisits++;
+        var num; 
+        document.cookie = "visint="+num;
+        num++;
         console.log(document.cookie);
     }
 </script>
