--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -3,7 +3,7 @@
 <body onload="myFunc()">
 <script>
     function myFunc() {
-        if document.cookie != "visint=undefined" {
+        if (document.cookie != "visint=undefined") {
             var num;
         else {
             var num = 0;
