--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -7,7 +7,7 @@
             var num = document.cookie;
         }
         if (document.cookie == "visint=undefined") {
-            var num;
+            var num = 0;
         }
         document.cookie = "visint="+num;
         num++;
