--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: 400;
-  background: #0B2647;
+  background: ##1c579f;
   color: white;
   line-height: 1.5;
   letter-spacing: 0.5px;
@@ -97,7 +97,7 @@ details > summary::-webkit-details-marker {
 	.openbtn {
 	  font-size: 20px;
 	  cursor: pointer;
-	  background-color: #0B2647;
+	  background-color: #1c579f;
 	  color: #000;
 	  padding: 10px 15px;
 	  border: none;
@@ -105,7 +105,7 @@ details > summary::-webkit-details-marker {
 	}
 	
 	.openbtn:hover {
-	  background-color: #0B2647;
+	  background-color: #1c579f;
 	}
 	
 	#main {
@@ -171,7 +171,7 @@ details > summary::-webkit-details-marker {
 
 			@media (prefers-color-scheme: light) {
 				body {
-					background-color: #0B2647;
+					background-color: #1c579f;
 				}
 			}
 		</style>
@@ -215,7 +215,7 @@ My contact details are below:</p>
 
 			@media (prefers-color-scheme: light) {
 				body {
-					background-color: #0B2647;
+					background-color: #1c579f;
 				}
 			}
 		</style>
@@ -252,7 +252,7 @@ I currently have 90 subscribers on YouTube.</p>
 
 			@media (prefers-color-scheme: light) {
 				body {
-					background-color: #0B2647;
+					background-color: #1c579f;
 				}
 			}
 		</style>
