--- a/test.html
+++ b/test.html
@@ -265,7 +265,7 @@ I currently have 90 subscribers on YouTube.</p>
 	</head>
 	<body>
 <article class="markdown-body">
-<p><a href="games/game_vault/game_vault.html">Game Vault\n</a></p>
+<p><a href="games/brolga.html">Weird meme game I made</a></p>
 <p><a href="chatroom/index.html">Message Board</a></p>
     </div>
   </details>
